x86/mtrr, pat: make pat independent from mtrr
Makes CONFIG_X86_PAT independent from CONFIG_MTRR by allowing pat to be
initialized even when MTRR is disabled/unsupported.
On some (virtual) platforms, PAT is supported without MTRR support
because PAT is designed to replace MTRR. In those environment, it's
desirable to allow PAT to be enabled even when MTRR is
disabled/unsupported.

With the change set of edfe63e, PAT is disabled when MTRR is disabled as
work around. Although the right solution is to allow PAT to be
initialized even when PAT is disabled, it was not addressed. This patch
addresses it.
This patch makes x86 pat indepdent from mtrr by splitting out common
rendezvous logic from MTRR code, and allows PAT to be initialized even
when MTRR is disabled/unsupported. CONFIG_X86_PAT_WITHOUT_MTRR as
default n is introduced to keep the old behavior for safety.

This patch also address the case of pat disabled.

Cc: Toshi Kani <toshi.kani@hp.com>
Cc: Borislav Petkov <bp@suse.de>
Link: http://lkml.kernel.org/r/1458769323-24491-6-git-send-email-toshi.kani@hpe.com
Signed-off-by: Isaku Yamahata <isaku.yamahata@intel.com>

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -1829,7 +1829,6 @@ config MTRR_SANITIZER_SPARE_REG_NR_DEFAULT
 config X86_PAT
 	def_bool y
 	prompt "x86 PAT support" if EXPERT
-	depends on MTRR
 	---help---
 	  Use PAT attributes to setup page level cache control.
 
@@ -1840,6 +1839,19 @@ config X86_PAT
 	  spontaneous reboots) or a non-working video driver.
 
 	  If unsure, say Y.
+
+config X86_PAT_WITHOUT_MTRR
+	def_bool n
+	prompt "enable x86 PAT even without MTRR by default" if EXPERT
+	depends on X86_PAT
+	---help---
+	  Use PAT attributes even when MTRR is disabled by default.
+	  In some (virtual) platform, PAT is supported without MTRR.
+	  Choose 'y' for such platforms.
+	  Pass 'pat_without_mtrr' or 'no_pat_without_mtrr' on the
+	  kernel command line to override the default.
+
+	  If unsure, say N.
 
 config ARCH_USES_PG_UNCACHED
 	def_bool y
